--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.10.0",
     "pinia": "^2.1.7",
     "v-viewer": "^3.0.13",
     "viewerjs": "^1.11.6",
