--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "libphonenumbers": "^1.3.0",
+    "mustache": "^4.2.0",
+    "nanoid": "^5.0.7",
+    "node-xlsx": "^0.24.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
